Fix issues with overflow on flexbox

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 #forecast::-webkit-scrollbar {
     height: 0px;
+    width: 0px;
 }
 .overflow::-webkit-scrollbar-thumb, #forecast::-webkit-scrollbar {
     background-color: rgba(255, 255, 255, 0.7);
@@ -77,13 +78,9 @@ img {
 }
 
 #forecast {
-    align-items: flex-end;
     display: flex;
-    overflow-x: auto;
-    justify-content: space-between;
+    overflow: auto;
     height: 40%;
-    width: 100%;
-    margin: auto;
     border: 5px solid black;
 }
 
@@ -157,7 +154,7 @@ img {
 }
 
 .weather-section {
-    width: 16.67%;
+    min-width: 16.67%;
     height: 100%;
 }
 
@@ -199,7 +196,7 @@ img {
 .window-glas {
     border: 5px solid black;
     border-bottom: 0;
-    width: 50%;
+    width: 100%;
     box-shadow: inset 0 0 10px white;
     background-color: rgba(255, 255, 255, 0.2);
 }
@@ -210,9 +207,25 @@ img {
     height: 60%;
 }
 
+@media (max-width: 1024px) {
+    #forecast {
+        height: 100vh;
+        flex-direction: column;
+    }
+
+    .window-top {
+        display: none;
+    }
+
+    .weather-section {
+        min-width: 33.33%
+    }
+}
+
 @media (max-width: 720px) {
     #cities-input {
         width: 100%;
+        margin: 0;
         margin-bottom: 20px;
     }
 }
